--- a/codegen.yml
+++ b/codegen.yml
@@ -2,6 +2,9 @@ overwrite: true
 schema: "http://localhost:3000/graphql"
 documents: "app/javascript/graphql/**/*.ts"
 generates:
-  app/javascript/graphql/generated/:
-    preset: "client"
-    plugins: []
+  app/javascript/graphql/generated.ts:
+    plugins: 
+      - typescript
+      - typescript-operations
+      - typescript-react-apollo
+
