--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@tanstack/react-query": "^4.29.14",
+    "axios": "^1.4.0",
     "esbuild": "^0.18.4",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
     "sass": "^1.63.4"
   },
   "scripts": {
